--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tweet-cards"]
-	path = tweet-cards
-	url = https://github.com/user/tweet-cards.git
+[submodule "test-task-tweets"]
+	path = test-task-tweets
+	url = https://github.com/NVZ1994/test-task-tweets.git
