--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test-task-tweets"]
 	path = test-task-tweets
-	url = https://github.com/NVZ1994/test-task-tweets.git
+	url = https://github.com/NVZ1994/test-task-tweets
