--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-task-tweets",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NVZ1994.github.io/test-task-tweets/",
+  "homepage": "https://nvz1994.github.io/test-task-tweets/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
